--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Htay's Weekly Availability Schedule</title>
+    <title>Htay Hlaing Win (Brandon Wu)'s Weekly Availability Schedule</title>
     <style>
         * {
             margin: 0;
@@ -254,28 +254,10 @@
     <div class="container">
         <div class="header">
             <h1>📅 My Weekly Schedule & Availability</h1>
-            <p>Victoria University Sydney - Network Information Technology</p>
+            <p>Victoria University Sydney Student</p>
         </div>
 
         <div class="content">
-            <div class="legend">
-                <div class="legend-item">
-                    <div class="legend-color" style="background: #27ae60;"></div>
-                    <span>Object Oriented Programming</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background: #f39c12;"></div>
-                    <span>Cyber Security Essentials</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background: #3498db;"></div>
-                    <span>Server Administration</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-color" style="background: #9b59b6;"></div>
-                    <span>Web Application Development</span>
-                </div>
-            </div>
 
             <div class="navigation">
                 <button class="nav-btn active" onclick="showWeek('week1')">Week 1 (July 28)</button>
@@ -299,7 +281,7 @@
             <!-- Week 1: July 28 - Aug 3 -->
             <div class="week-section active" id="week1">
                 <div class="week-header">
-                    <div class="week-title">Week 1 - Object Oriented Programming</div>
+                    <div class="week-title">Object Oriented Programming</div>
                     <div class="week-dates">July 28 - August 3, 2025</div>
                 </div>
                 <div class="week-grid">
@@ -321,7 +303,7 @@
                     <div class="day-column">
                         <div class="day-header">Tuesday<div class="day-date">July 29</div></div>
                         <div class="day-content">
-                            <div class="free-time">✨ Free Day<br>Available for meetings</div>
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
                         </div>
                     </div>
                     <div class="day-column">
@@ -357,7 +339,7 @@
                     <div class="day-column">
                         <div class="day-header">Friday<div class="day-date">Aug 1</div></div>
                         <div class="day-content">
-                            <div class="free-time">✨ Free Day<br>Available for meetings</div>
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
                         </div>
                     </div>
                     <div class="day-column">
