--- a/index.html
+++ b/index.html
@@ -352,15 +352,27 @@
     <div class="container">
         <div class="header">
             <h1>📅 My Weekly Schedule & Availability</h1>
-            <p>Victoria University Sydney Student</p>
+            <p>Current Victoria University Sydney Student</p>
         </div>
 
         <div class="content">
             <div class="navigation">
-                <button class="nav-btn active" onclick="showWeek('week1')">Week 1 (July 28)</button>
-                <button class="nav-btn" onclick="showWeek('week5')">Week 5 (Aug 25)</button>
-                <button class="nav-btn" onclick="showWeek('week9')">Week 9 (Sep 29)</button>
-                <button class="nav-btn" onclick="showWeek('week13')">Week 13 (Oct 27)</button>
+                <button class="nav-btn active" onclick="showWeek('week1')">July 28 to Aug 3</button>
+                <button class="nav-btn active" onclick="showWeek('week2')">August 4 to August 10</button>
+                <button class="nav-btn active" onclick="showWeek('week3')">August 11 to August 17</button>
+                <button class="nav-btn active" onclick="showWeek('week4')">August 18 to August 24</button>
+                <button class="nav-btn active" onclick="showWeek('week5')">August 25 to August 31</button>
+                <button class="nav-btn active" onclick="showWeek('week6')">September 1 to September 7</button>
+                <button class="nav-btn active" onclick="showWeek('week7')">September 8 to September 14</button>
+                <button class="nav-btn active" onclick="showWeek('week8')">September 15 to September 21</button>
+                <button class="nav-btn active" onclick="showWeek('week9')">September 29 to October 5</button>
+                <button class="nav-btn active" onclick="showWeek('week10')">October 6 to October 12</button>
+                <button class="nav-btn active" onclick="showWeek('week11')">October 13 to October 19</button>
+                <button class="nav-btn active" onclick="showWeek('week12')">October 20 to October 26</button>
+                <button class="nav-btn active" onclick="showWeek('week13')">October 27 to November 2</button>
+                <button class="nav-btn active" onclick="showWeek('week14')">November 3 to November 9</button>
+                <button class="nav-btn active" onclick="showWeek('week15')">November 10 to November 16</button>
+                <button class="nav-btn active" onclick="showWeek('week16')">November 17 to November 23</button>
             </div>
 
             <!-- Week 1: July 28 - Aug 3 -->
