--- a/index.html
+++ b/index.html
@@ -357,22 +357,22 @@
 
         <div class="content">
             <div class="navigation">
-                <button class="nav-btn active" onclick="showWeek('week1')">July 28 to Aug 3</button>
-                <button class="nav-btn active" onclick="showWeek('week2')">August 4 to August 10</button>
-                <button class="nav-btn active" onclick="showWeek('week3')">August 11 to August 17</button>
-                <button class="nav-btn active" onclick="showWeek('week4')">August 18 to August 24</button>
-                <button class="nav-btn active" onclick="showWeek('week5')">August 25 to August 31</button>
-                <button class="nav-btn active" onclick="showWeek('week6')">September 1 to September 7</button>
-                <button class="nav-btn active" onclick="showWeek('week7')">September 8 to September 14</button>
-                <button class="nav-btn active" onclick="showWeek('week8')">September 15 to September 21</button>
-                <button class="nav-btn active" onclick="showWeek('week9')">September 29 to October 5</button>
-                <button class="nav-btn active" onclick="showWeek('week10')">October 6 to October 12</button>
-                <button class="nav-btn active" onclick="showWeek('week11')">October 13 to October 19</button>
-                <button class="nav-btn active" onclick="showWeek('week12')">October 20 to October 26</button>
-                <button class="nav-btn active" onclick="showWeek('week13')">October 27 to November 2</button>
-                <button class="nav-btn active" onclick="showWeek('week14')">November 3 to November 9</button>
-                <button class="nav-btn active" onclick="showWeek('week15')">November 10 to November 16</button>
-                <button class="nav-btn active" onclick="showWeek('week16')">November 17 to November 23</button>
+                <button class="nav-btn active" onclick="showWeek('week1', this)">July 28 to Aug 3</button>
+                <button class="nav-btn" onclick="showWeek('week2', this)">August 4 to August 10</button>
+                <button class="nav-btn" onclick="showWeek('week3', this)">August 11 to August 17</button>
+                <button class="nav-btn" onclick="showWeek('week4', this)">August 18 to August 24</button>
+                <button class="nav-btn" onclick="showWeek('week5', this)">August 25 to August 31</button>
+                <button class="nav-btn" onclick="showWeek('week6', this)">September 1 to September 7</button>
+                <button class="nav-btn" onclick="showWeek('week7', this)">September 8 to September 14</button>
+                <button class="nav-btn" onclick="showWeek('week8', this)">September 15 to September 21</button>
+                <button class="nav-btn" onclick="showWeek('week9', this)">September 29 to October 5</button>
+                <button class="nav-btn" onclick="showWeek('week10', this)">October 6 to October 12</button>
+                <button class="nav-btn" onclick="showWeek('week11', this)">October 13 to October 19</button>
+                <button class="nav-btn" onclick="showWeek('week12', this)">October 20 to October 26</button>
+                <button class="nav-btn" onclick="showWeek('week13', this)">October 27 to November 2</button>
+                <button class="nav-btn" onclick="showWeek('week14', this)">November 3 to November 9</button>
+                <button class="nav-btn" onclick="showWeek('week15', this)">November 10 to November 16</button>
+                <button class="nav-btn" onclick="showWeek('week16', this)">November 17 to November 23</button>
             </div>
 
             <!-- Week 1: July 28 - Aug 3 -->
@@ -733,3 +733,88 @@
                     <div class="day-column">
                         <div class="day-header">Tuesday<div class="day-date">Oct 28</div></div>
                         <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Wednesday<div class="day-date">Oct 29</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="Node.js & Express">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="API development lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Thursday<div class="day-date">Oct 30</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React Router & Redux">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="State management lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Friday<div class="day-date">Oct 31</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="Deployment & Hosting">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="DevOps integration lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Saturday<div class="day-date">Nov 1</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Sunday<div class="day-date">Nov 2</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+function showWeek(weekId, btn) {
+    // Hide all week sections
+    document.querySelectorAll('.week-section').forEach(function(section) {
+        section.classList.remove('active');
+    });
+    // Show selected week section
+    var week = document.getElementById(weekId);
+    if (week) week.classList.add('active');
+
+    // Remove active from all buttons
+    document.querySelectorAll('.nav-btn').forEach(function(b) {
+        b.classList.remove('active');
+    });
+    // Add active to clicked button
+    if (btn) btn.classList.add('active');
+}
+</script>
+</body>
+</html>
