--- a/index.html
+++ b/index.html
@@ -478,6 +478,64 @@
                 </div>
             </div>
 
+            <!-- Week 2: Aug 4 - Aug 10 -->
+            <div class="week-section" id="week2">
+                <div class="week-header">
+                    <div class="week-title">Week 2</div>
+                    <div class="week-dates">August 4 - August 10, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 3: Aug 11 - Aug 17 -->
+            <div class="week-section" id="week3">
+                <div class="week-header">
+                    <div class="week-title">Week 3</div>
+                    <div class="week-dates">August 11 - August 17, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 4: Aug 18 - Aug 24 -->
+            <div class="week-section" id="week4">
+                <div class="week-header">
+                    <div class="week-title">Week 4</div>
+                    <div class="week-dates">August 18 - August 24, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+
             <!-- Week 5: Aug 25 - Aug 31 (Cyber Security starts) -->
             <div class="week-section" id="week5">
                 <div class="week-header">
@@ -581,6 +639,64 @@
                 </div>
             </div>
 
+            <!-- Week 6: Sep 1 - Sep 7 -->
+            <div class="week-section" id="week6">
+                <div class="week-header">
+                    <div class="week-title">Week 6</div>
+                    <div class="week-dates">September 1 - September 7, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 7: Sep 8 - Sep 14 -->
+            <div class="week-section" id="week7">
+                <div class="week-header">
+                    <div class="week-title">Week 7</div>
+                    <div class="week-dates">September 8 - September 14, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 8: Sep 15 - Sep 21 -->
+            <div class="week-section" id="week8">
+                <div class="week-header">
+                    <div class="week-title">Week 8</div>
+                    <div class="week-dates">September 15 - September 21, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+
             <!-- Week 9: Sep 29 - Oct 5 (Server Admin starts) -->
             <div class="week-section" id="week9">
                 <div class="week-header">
@@ -681,6 +797,64 @@
                             <div class="free-time">🎉 Weekend<br>Fully Available</div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- Week 10: Oct 6 - Oct 12 -->
+            <div class="week-section" id="week10">
+                <div class="week-header">
+                    <div class="week-title">Week 10</div>
+                    <div class="week-dates">October 6 - October 12, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 11: Oct 13 - Oct 19 -->
+            <div class="week-section" id="week11">
+                <div class="week-header">
+                    <div class="week-title">Week 11</div>
+                    <div class="week-dates">October 13 - October 19, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                </div>
+            </div>
+            <!-- Week 12: Oct 20 - Oct 26 -->
+            <div class="week-section" id="week12">
+                <div class="week-header">
+                    <div class="week-title">Week 12</div>
+                    <div class="week-dates">October 20 - October 26, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item"><div class="stat-icon">⏳</div><div class="stat-label">No Data</div><div class="stat-value">TBA</div></div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column"><div class="day-header">Monday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Tuesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Wednesday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Thursday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Friday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Saturday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
+                    <div class="day-column"><div class="day-header">Sunday</div><div class="day-content"><div class="free-time">No schedule</div></div></div>
                 </div>
             </div>
 
