--- a/index.html
+++ b/index.html
@@ -481,14 +481,30 @@
             <!-- Week 2: Aug 4 - Aug 10 -->
             <div class="week-section" id="week2">
                 <div class="week-header">
-                    <div class="week-title">Week 2 - Object Oriented Programming</div>
+                    <div class="week-title">Object Oriented Programming</div>
                     <div class="week-dates">August 4 - August 10, 2025</div>
                 </div>
                 <div class="week-stats">
-                    <div class="stat-item"><div class="stat-icon">📚</div><div class="stat-label">Class Hours</div><div class="stat-value">12 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">💻</div><div class="stat-label">Lab Hours</div><div class="stat-value">3 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">✨</div><div class="stat-label">Free Days</div><div class="stat-value">4 days</div></div>
-                    <div class="stat-item"><div class="stat-icon">📖</div><div class="stat-label">Subject Focus</div><div class="stat-value">OOP</div></div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">12 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">💻</div>
+                        <div class="stat-label">Lab Hours</div>
+                        <div class="stat-value">3 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Subject Focus</div>
+                        <div class="stat-value">OOP</div>
+                    </div>
                 </div>
                 <div class="week-grid">
                     <div class="day-column">
@@ -565,14 +581,30 @@
             <!-- Week 3: Aug 11 - Aug 17 -->
             <div class="week-section" id="week3">
                 <div class="week-header">
-                    <div class="week-title">Week 3 - Object Oriented Programming</div>
+                    <div class="week-title">Object Oriented Programming</div>
                     <div class="week-dates">August 11 - August 17, 2025</div>
                 </div>
                 <div class="week-stats">
-                    <div class="stat-item"><div class="stat-icon">📚</div><div class="stat-label">Class Hours</div><div class="stat-value">12 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">💻</div><div class="stat-label">Lab Hours</div><div class="stat-value">3 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">✨</div><div class="stat-label">Free Days</div><div class="stat-value">4 days</div></div>
-                    <div class="stat-item"><div class="stat-icon">📖</div><div class="stat-label">Subject Focus</div><div class="stat-value">OOP</div></div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">12 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">💻</div>
+                        <div class="stat-label">Lab Hours</div>
+                        <div class="stat-value">3 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Subject Focus</div>
+                        <div class="stat-value">OOP</div>
+                    </div>
                 </div>
                 <div class="week-grid">
                     <div class="day-column">
@@ -649,14 +681,30 @@
             <!-- Week 4: Aug 18 - Aug 24 -->
             <div class="week-section" id="week4">
                 <div class="week-header">
-                    <div class="week-title">Week 4 - Object Oriented Programming</div>
+                    <div class="week-title">Object Oriented Programming</div>
                     <div class="week-dates">August 18 - August 24, 2025</div>
                 </div>
                 <div class="week-stats">
-                    <div class="stat-item"><div class="stat-icon">📚</div><div class="stat-label">Class Hours</div><div class="stat-value">12 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">💻</div><div class="stat-label">Lab Hours</div><div class="stat-value">3 hours</div></div>
-                    <div class="stat-item"><div class="stat-icon">✨</div><div class="stat-label">Free Days</div><div class="stat-value">4 days</div></div>
-                    <div class="stat-item"><div class="stat-icon">📖</div><div class="stat-label">Subject Focus</div><div class="stat-value">OOP</div></div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">12 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">💻</div>
+                        <div class="stat-label">Lab Hours</div>
+                        <div class="stat-value">3 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Subject Focus</div>
+                        <div class="stat-value">OOP</div>
+                    </div>
                 </div>
                 <div class="week-grid">
                     <div class="day-column">
